syntax = "proto3";

package api.v1;

option go_package = "pkg/api";

// VectorIDs contain identifiers for a population.
message VectorIDs {
  uint64 id = 1;
}

// Vector is an element used in the Differential Evoluition algorithm.
message Vector {
  VectorIDs ids = 1;
  repeated double elements = 2;
  repeated double objectives = 3;
  double crowding_distance = 4;
}

// PopulationIDs contain identifiers for a population.
message PopulationIDs {
  uint64 id = 1;
}

// Population is a vector set, which describes the population of a generation in
// the evolutionary algorithm.
message Population {
  PopulationIDs ids = 1;
  repeated Vector vectors = 2;
}

// PopulationParameters are the values used by a Population in a generation.
message PopulationParameters {
  int64 population_size = 1;
  int64 dimensions_size = 2;
  int64 objetives_size = 3;
  repeated double floors = 4;
  repeated double ceils = 5;
}

// GenerationIDs contain identifiers for a Generation.
message GenerationIDs {
  uint64 id = 1;
}

// Generation is a steps on the Differential Evolution algorithm, each
// generation a new population is generated via mutation and filtered according
// to their performance in the problem.
message Generation {
  GenerationIDs ids = 1;
  uint64 execution_id = 2;
  repeated Population populations = 3;
}

message ParetoIDs {
  uint64 id = 1;
  string user_id = 2;
}

message Pareto {
  ParetoIDs ids = 1;
  Population population = 2;
  repeated double max_objs = 3;
}


